feat: Create endpoints and service for custom icons [DHIS2-15039]