@@ -29,61 +29,234 @@ package org.hisp.dhis.icon;
 
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
+import lombok.RequiredArgsConstructor;
+
+import org.hisp.dhis.feedback.BadRequestException;
+import org.hisp.dhis.feedback.NotFoundException;
+import org.hisp.dhis.fileresource.FileResource;
+import org.hisp.dhis.fileresource.FileResourceService;
+import org.hisp.dhis.schema.descriptors.FileResourceSchemaDescriptor;
+import org.hisp.dhis.schema.descriptors.IconSchemaDescriptor;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
+import com.google.common.base.Strings;
 
 /**
  * @author Kristian Wærstad
  */
+@RequiredArgsConstructor
 @Service( "org.hisp.dhis.icon.IconService" )
 public class DefaultIconService
     implements IconService
 {
     private static final String ICON_PATH = "SVGs";
 
-    private Map<String, IconData> icons = Arrays.stream( Icon.values() )
+    private final CustomIconStore customIconStore;
+
+    private final FileResourceService fileResourceService;
+
+    private final Map<String, StandardIcon> standardIcons = Arrays.stream( Icon.values() )
         .map( Icon::getVariants )
         .flatMap( Collection::stream )
-        .collect( Collectors.toMap( IconData::getKey, Function.identity() ) );
+        .collect( Collectors.toMap( StandardIcon::getKey, Function.identity() ) );
 
     @Override
-    public Collection<IconData> getIcons()
+    public Collection<BaseIcon> getIcons( String contextApiPath )
     {
-        return icons.values();
+        List<BaseIcon> standardIconList = updateStandardIconReference( standardIcons, contextApiPath );
+        List<BaseIcon> customIconList = updateCustomIconReference( customIconStore.getAllIcons(), contextApiPath );
+
+        return Stream.concat( standardIconList.stream(), customIconList.stream() ).toList();
     }
 
     @Override
-    public Collection<IconData> getIcons( Collection<String> keywords )
+    public Collection<BaseIcon> getIcons( Collection<String> keywords, String contextApiPath )
     {
-        return icons.values().stream()
-            .filter( icon -> Arrays.asList( icon.getKeywords() ).containsAll( keywords ) )
-            .collect( Collectors.toList() );
+        List<BaseIcon> standardIconList = updateStandardIconReference( standardIcons, contextApiPath );
+        List<BaseIcon> customIconList = updateCustomIconReference( customIconStore.getIconsByKeywords( keywords ),
+            contextApiPath );
+
+        return Stream.concat( standardIconList.stream()
+            .filter( icon -> new HashSet<>( icon.getKeywords() ).containsAll( keywords ) ).toList().stream(),
+            customIconList.stream() )
+            .toList();
     }
 
     @Override
-    public Optional<IconData> getIcon( String key )
+    public BaseIcon getIcon( String key, String contextApiPath )
+        throws NotFoundException
     {
-        return Optional.ofNullable( icons.get( key ) );
+        if ( standardIcons.containsKey( key ) )
+        {
+            return setStandardIconReference( standardIcons.get( key ), contextApiPath );
+        }
+        else
+        {
+            CustomIcon customIcon = customIconStore.getIconByKey( key );
+            if ( customIcon == null )
+            {
+                throw new NotFoundException( String.format( "Icon not found: %s", key ) );
+            }
+
+            return setCustomIconReference( customIcon, contextApiPath );
+        }
+    }
+
+    @Override
+    public CustomIcon getCustomIcon( String key )
+        throws NotFoundException
+    {
+        CustomIcon customIcon = customIconStore.getIconByKey( key );
+        if ( customIcon == null )
+        {
+            throw new NotFoundException( String.format( "Custom icon not found: %s", key ) );
+        }
+
+        return customIcon;
     }
 
     @Override
     public Optional<Resource> getIconResource( String key )
+        throws BadRequestException
     {
-        return Optional.ofNullable( new ClassPathResource( String.format( "%s/%s.%s", ICON_PATH, key, Icon.SUFFIX ) ) );
+        if ( standardIcons.containsKey( key ) )
+        {
+            return Optional.of( new ClassPathResource( String.format( "%s/%s.%s", ICON_PATH, key, Icon.SUFFIX ) ) );
+        }
+
+        throw new BadRequestException( String.format( "Icon with key %s is not a standard icon.", key ) );
     }
 
     @Override
-    public Collection<String> getKeywords()
+    public List<String> getKeywords()
     {
-        return icons.values().stream()
-            .map( IconData::getKeywords )
-            .flatMap( Arrays::stream )
-            .collect( Collectors.toSet() );
+        return Stream.concat( standardIcons.values().stream()
+            .map( BaseIcon::getKeywords )
+            .flatMap( List::stream ), customIconStore.getKeywords().stream() ).toList();
+    }
+
+    @Override
+    public boolean iconExists( String key )
+    {
+        return standardIcons.get( key ) != null || customIconStore.getIconByKey( key ) != null;
+    }
+
+    @Override
+    @Transactional
+    public void addCustomIcon( CustomIcon customIcon )
+        throws BadRequestException,
+        NotFoundException
+    {
+        validateIconExists( customIcon.getKey() );
+        validateFileResourceExists( customIcon.getFileResource() );
+        customIconStore.save( customIcon );
+    }
+
+    @Override
+    @Transactional
+    public void updateCustomIcon( String key, String description, List<String> keywords )
+        throws BadRequestException,
+        NotFoundException
+    {
+        CustomIcon icon = validateCustomIconExists( key );
+
+        if ( description != null )
+        {
+            icon.setDescription( description );
+        }
+
+        if ( keywords != null )
+        {
+            icon.setKeywords( keywords );
+        }
+
+        customIconStore.update( icon );
+    }
+
+    @Override
+    @Transactional
+    public void deleteCustomIcon( String key )
+        throws BadRequestException,
+        NotFoundException
+    {
+        CustomIcon icon = validateCustomIconExists( key );
+        fileResourceService.getFileResource( icon.getFileResource().getUid() ).setAssigned( false );
+        customIconStore.delete( icon );
+    }
+
+    private void validateIconExists( String key )
+        throws BadRequestException
+    {
+        validateIconKeyNotNullOrEmpty( key );
+
+        if ( iconExists( key ) )
+        {
+            throw new BadRequestException( String.format( "Icon with key %s already exists.", key ) );
+        }
+    }
+
+    private void validateIconKeyNotNullOrEmpty( String key )
+        throws BadRequestException
+    {
+        if ( Strings.isNullOrEmpty( key ) )
+        {
+            throw new BadRequestException( "Icon key not specified." );
+        }
+    }
+
+    private void validateFileResourceExists( FileResource fileResource )
+        throws BadRequestException,
+        NotFoundException
+    {
+        if ( fileResource == null || Strings.isNullOrEmpty( fileResource.getUid() ) )
+        {
+            throw new BadRequestException( "File resource id not specified." );
+        }
+
+        if ( fileResourceService.getFileResource( fileResource.getUid() ) == null )
+        {
+            throw new NotFoundException( String.format( "File resource %s does not exist", fileResource.getUid() ) );
+        }
+    }
+
+    private CustomIcon validateCustomIconExists( String key )
+        throws NotFoundException,
+        BadRequestException
+    {
+        validateIconKeyNotNullOrEmpty( key );
+        return getCustomIcon( key );
+    }
+
+    private List<BaseIcon> updateStandardIconReference( Map<String, StandardIcon> icons, String contextApiPath )
+    {
+        return icons.values().stream().map( icon -> setStandardIconReference( icon, contextApiPath ) ).toList();
+    }
+
+    private List<BaseIcon> updateCustomIconReference( List<CustomIcon> icons, String contextApiPath )
+    {
+        return icons.stream().map( icon -> setCustomIconReference( icon, contextApiPath ) ).toList();
+    }
+
+    private BaseIcon setStandardIconReference( StandardIcon standardIcon, String contextApiPath )
+    {
+        return standardIcon.setReference( String.format( "%s%s/%s/icon.%s", contextApiPath,
+            IconSchemaDescriptor.API_ENDPOINT, standardIcon.getKey(), Icon.SUFFIX ) );
+    }
+
+    private BaseIcon setCustomIconReference( CustomIcon customIcon, String contextApiPath )
+    {
+        return customIcon.setReference( String.format( "%s%s/%s/data", contextApiPath,
+            FileResourceSchemaDescriptor.API_ENDPOINT, customIcon.getFileResourceUid() ) );
     }
 }
